--- a/css/my-style.css
+++ b/css/my-style.css
@@ -7,13 +7,17 @@
 .header_top {
   background-color: #111135;
   height: 10vh;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 3;
 }
 .hamburger {
   display: none;
-  padding-top: 2vh;
+  padding-top: 1.75vh;
 }
 #title {
-  font-size: 1.5vw;
+  font-size: 2vw;
   color: white;
   line-height: 10vh;
   text-transform: uppercase;
@@ -50,6 +54,7 @@ nav ul li {
   width: 15%;
   background-color: white;
   border: 1px solid white;
+  vertical-align: middle;
 }
 .far.fa-star {
   display: inline-block;
@@ -78,16 +83,39 @@ nav ul li {
   text-transform: uppercase;
   color: white;
 }
-.images_portfolio {
+.title_three {
+  margin-top: 10px;
+  font-size: 1vw;
+  text-transform: uppercase;
+  color: white;
+}
+.item_portfolio {
   margin: 20px;
   border-radius: 5px;
+  overflow: hidden;
+  cursor: pointer;
 }
-.images_portfolio img {
+.item_portfolio .layover_ img {
   width: 100%;
-  border-radius: 5px;
 }
-.images_portfolio img:hover {
-  background-color: rgba(0, 0, 0, 0.1);
+.layover_ i {
+  display: none;
+}
+.layover_:hover {
+  position: relative;
+  vertical-align: middle;
+}
+.layover_:hover .fas.fa-plus {
+  display: block;
+  font-size: 75px;
+  position: absolute;
+  z-index: 1;
+  top: 50%;
+  left: 50%;
+  width: 100%;
+  height: 100%;
+  transform: translate(-50%, -50%);
+  background-color: rgba(0, 100, 0, 0.3);
 }
 
 .section_bottom {
@@ -99,26 +127,17 @@ nav ul li {
   color: white;
 }
 .lor p {
-  font-size: 1.5vw;
+  font-size: 1vw;
 }
-#btn_section {
-  width: 100%;
-  height: 5vh;
-  line-height: 5vh;
+.bt_sb {
+  background-color: #23b985;
   border: 2px solid white;
-  border-radius: 10px;
-  margin: 30px 0;
-}
-#btn_section .fas.fa-download {
-  display: inline-block;
   color: white;
-  width: 1.5vw;
-  margin-right: 5px;
+  margin-bottom: 10px;
 }
-#btn_section p {
-  display: inline-block;
-  font-size: 1.5vw;
-  color: white;
+.bt_sb:hover {
+  background-color: white;
+  color: #23b985;
 }
 .align {
   text-align: center;
@@ -146,6 +165,7 @@ nav ul li {
   background-color: #23b985;
   text-align: center;
   color: white;
+  margin-top: 10vh;
 }
 
 .text_ {
@@ -168,17 +188,54 @@ form p {
   text-align: center;
   border-radius: 2.5px;
   line-height: 5vh;
-  background-color: green;
+  background-color: #23b985;
+  margin: 10px 0;
+}
+.contact_ textarea {
+  color: black;
+  box-shadow: none;
+  border-left: none;
+  border-right: none;
+  border-top: none;
+  padding: 0;
+  font-size: 1.5vw;
   margin-top: 10px;
 }
-#spacing_ {
-  margin-bottom: 200px;
-}
 .footer_top {
-  background-color: blue;
+  background-color: #111135;
+}
+.footer_top p {
+  font-size: 1vw;
+}
+.footer_top a {
+  position: relative;
+  display: inline-block;
+  margin-top: 10px;
+  display: inline-block;
+  border-radius: 50%;
+  width: 3vw;
+  height: 3vh;
+  padding: 25px;
+  color: white;
+  border: 1px solid white;
+}
+.round_social i {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 .footer_bottom {
-  background-color: black;
+  background-color: #0b0b25;
+  height: 5vh;
+  line-height: 5vh;
+}
+.footer_bottom p {
+  font-size: 0.5vw;
+  color: white;
+}
+strong {
+  color: cyan;
 }
 
 @media screen and (max-width: 768px) {
