--- a/css/my-style.css
+++ b/css/my-style.css
@@ -94,28 +94,32 @@ nav ul li {
   border-radius: 5px;
   overflow: hidden;
   cursor: pointer;
+  position: relative;
 }
-.item_portfolio .layover_ img {
+.item_portfolio img {
   width: 100%;
 }
-.layover_ i {
+.layover i {
   display: none;
 }
-.layover_:hover {
-  position: relative;
-  vertical-align: middle;
-}
-.layover_:hover .fas.fa-plus {
-  display: block;
-  font-size: 75px;
+.layover {
   position: absolute;
-  z-index: 1;
-  top: 50%;
-  left: 50%;
   width: 100%;
   height: 100%;
-  transform: translate(-50%, -50%);
+  top: 0;
+  z-index: 2;
+}
+.layover:hover {
   background-color: rgba(0, 100, 0, 0.3);
+}
+.layover:hover .fas.fa-plus {
+  display: block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 75px;
+  z-index: 2;
 }
 
 .section_bottom {
